--- a/page.html
+++ b/page.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js" async></script>
     <script type="text/javascript" src="carousel.js" async></script>
+    <script type="text/javascript" src="modal.js" async></script>
     <title>Just Stream It</title>
 </head>
 <body>
@@ -24,29 +25,375 @@
         </header>
         <main>
             <section id="meilleur_film">
-                <div id="meilleur_film_option">
-                    <h3 id="titre_meilleur_film">Titre du film</h3>
-                    <p id="résumé_meilleur_film">Résumé du film</p>
-                    <a href="lien vers le film"><input type="button" value="Lire le film"></a>
+                <div class="meilleur_film_container">
+                    <div class="meilleur_film_image">
+                          <button id="myBtn"><img id="image_meilleur_film" src="" alt="photo du film"></button>
+                          <div id="myModal" class="modal">
+                              <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <p id="meilleur_film_modal">Film information</p>
+                              </div>
+                          </div>
+                    <div class="meilleur_film_body">
+                        <div id="titre_meilleur_film">
+                            Titre du meilleur film
+                        </div>
+                        <a href="lien vers le film"><input type="button" value="Lire le film"></a>
+                        <div id="résumé_meilleur_film">
+                            Description du film
+                        </div>
+                    </div>
+                    </div>
                 </div>
-                <img id="image_meilleur_film" src="" alt="photo du film">
             </section>
 
             <section id="films_les_mieux_notés">
-                <div class="container">
-                    <h2>Films les mieux notés</h2>
-                    <div class="carousel">
-                        <div class="carousel_container">
-                            <div class="carousel_item">Film 1</div>
-                            <div class="carousel_item">Film 2</div>
-                            <div class="carousel_item">Film 3</div>
-                            <div class="carousel_item">Film 4</div>
-                            <div class="carousel_item">Film 5</div>
-                            <div class="carousel_item">Film 6</div>
-                            <div class="carousel_item">Film 7</div>
+                  <div class="container">
+                    <div class="title">Les meilleurs films</div>
+
+                    <div id="carousel1">
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img id="image_meilleur_film_1" src="" alt="photo du film">
                         </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 1
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img id="image_meilleur_film_2" src="" alt="photo du film">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 2
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img id="image_meilleur_film_3" src="" alt="photo du film">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 3
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img id="image_meilleur_film_4" src="" alt="photo du film">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 4
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img id="image_meilleur_film_5" src="" alt="photo du film">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 5
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img id="image_meilleur_film_6" src="" alt="photo du film">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 6
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                             <img id="image_meilleur_film_7" src="" alt="photo du film">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 7
+                          </div>
+                        </div>
+                      </div>
+
                     </div>
-                </div>
+
+                    </div>
+            </section>
+            <section id="catégorie1">
+                  <div class="container">
+                    <div class="title">Catégorie 1</div>
+
+                    <div id="carousel2">
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 1
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat2.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 2
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat3.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 3
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat4.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 4
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img src="images/Basquiat5.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 5
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img src="images/Basquiat6.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 6
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                             <img src="images/Basquiat7.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 7
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+
+                    </div>
+            </section>
+            <section id="catégorie2">
+                  <div class="container">
+                    <div class="title">Catégorie 2</div>
+
+                    <div id="carousel3">
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 1
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat2.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 2
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat3.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 3
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat4.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 4
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img src="images/Basquiat5.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 5
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img src="images/Basquiat6.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 6
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                             <img src="images/Basquiat7.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 7
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+
+                    </div>
+            </section>
+            <section id="catégorie3">
+                  <div class="container">
+                    <div class="title">Catégorie 3</div>
+
+                    <div id="carousel4">
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 1
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat2.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 2
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat3.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 3
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                        <div class="item__image">
+                          <img src="images/Basquiat4.jpg" alt="">
+                        </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 4
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img src="images/Basquiat5.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 5
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                            <img src="images/Basquiat6.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 6
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="item">
+                          <div class="item__image">
+                             <img src="images/Basquiat7.jpg" alt="">
+                          </div>
+                        <div class="item__body">
+                          <div class="item__title">
+                            Mon titre 7
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+
+                    </div>
             </section>
 
         </main>
