--- a/page.html
+++ b/page.html
@@ -58,7 +58,7 @@
                           <img id="image_meilleur_film_1" src="" alt="photo du film">
                         </div>
                         <div class="item__body">
-                          <div class="item__title">
+                          <div id="titre_meilleur_film_1" class="item__title">
                             Mon titre 1
                           </div>
                         </div>
@@ -69,7 +69,7 @@
                           <img id="image_meilleur_film_2" src="" alt="photo du film">
                         </div>
                         <div class="item__body">
-                          <div class="item__title">
+                          <div id="titre_meilleur_film_2" class="item__title">
                             Mon titre 2
                           </div>
                         </div>
@@ -80,7 +80,7 @@
                           <img id="image_meilleur_film_3" src="" alt="photo du film">
                         </div>
                         <div class="item__body">
-                          <div class="item__title">
+                          <div id="titre_meilleur_film_3" class="item__title">
                             Mon titre 3
                           </div>
                         </div>
@@ -91,7 +91,7 @@
                           <img id="image_meilleur_film_4" src="" alt="photo du film">
                         </div>
                         <div class="item__body">
-                          <div class="item__title">
+                          <div id="titre_meilleur_film_4" class="item__title">
                             Mon titre 4
                           </div>
                         </div>
@@ -102,7 +102,7 @@
                             <img id="image_meilleur_film_5" src="" alt="photo du film">
                           </div>
                         <div class="item__body">
-                          <div class="item__title">
+                          <div id="titre_meilleur_film_5" class="item__title">
                             Mon titre 5
                           </div>
                         </div>
@@ -113,7 +113,7 @@
                             <img id="image_meilleur_film_6" src="" alt="photo du film">
                           </div>
                         <div class="item__body">
-                          <div class="item__title">
+                          <div id="titre_meilleur_film_6" class="item__title">
                             Mon titre 6
                           </div>
                         </div>
@@ -124,7 +124,7 @@
                              <img id="image_meilleur_film_7" src="" alt="photo du film">
                           </div>
                         <div class="item__body">
-                          <div class="item__title">
+                          <div id="titre_meilleur_film_7" class="item__title">
                             Mon titre 7
                           </div>
                         </div>
